<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sofia Airport</string>
    <string name="action_settings">Settings</string>
    <string name="arrivalsLabel">Arrivals</string>
    <string name="departuresLabel">Departures</string>
    <string name="planeTakeOffImageContentDescription">Plane take off</string>
    <string name="PlaneLandingImageContentDescription">Plane landing</string>
    <string name="title_activity_arrivals">Arrivals</string>
    <string name="title_activity_departures">Departures</string>
    <string name="title_activity_flight_details">Flight Details</string>
    <string name="scheduledTimeLabel">Time</string>
    <string name="flightNoLabel">Flight No</string>
    <string name="arrivesFromLabel">From</string>
    <string name="departsForLabel">To</string>
    <string name="expectedTimeLabel">Expected</string>
    <string name="statusLabel">Status</string>
    <string name="terminalLabel">Terminal</string>
    <string name="groundOperatorLabel">Ground Operator</string>
    <string name="scheduledTimeDetailedViewLabel">Scheduled Time</string>
    <string name="expectedTimeDetailedViewLabel">Expected Time</string>
    <string name="expectedTimeHeaderLabel">Time</string>
    <string name="arrivesFromHeaderLabel">From</string>
    <string name="flightNoHeaderLabel">Flight No</string>
    <string name="statusHeaderLabel">Status</string>
    <string name="terminaHeaderlLabel">Terminal</string>
    <string name="Error_NoInternetConnection">Unable to  connect to the Internet. Please check your  connection and try again</string>
    <string name="Error_Label">Error</string>
    <string name="Label_Loading">Loading</string>
    <string name="Msg_Wait">Please wait</string>
    <string name="action_navigation_to_airport">Navigate to Airport</string>
    <string name="lblTerminal1">Terminal 1</string>
    <string name="lblTerminal2">Terminal 2</string>
    <string name="lblNavigetToTerminal">Select terminal</string>
    <string name="msgInstallGoogleMaps">Please install Google Maps</string>
</resources>
