<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hmaleev.sofiaairport.Arrivals">


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:gravity="center_vertical"
        android:text="@string/scheduledTimeLabel"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/arrivesFromLabel"
        android:id="@+id/tvFrom"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvTime"
        android:layout_toEndOf="@+id/tvTime" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/statusLabel"
        android:id="@+id/tvStatus"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvFrom"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/terminalLabel"
        android:id="@+id/tvTerminal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvStatus"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvArrivals"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:layout_below="@+id/tvTime" />
</RelativeLayout>
